Chipping away at #83 - broke ground on *_FISCAL_* date literals, added LAST_QUARTER, THIS_QUARTER, NEXT_QUARTER date literals

--- a/plugins/CustomObjectRollupLogger/classes/RollupLogEventHandler.cls
+++ b/plugins/CustomObjectRollupLogger/classes/RollupLogEventHandler.cls
@@ -1,5 +1,5 @@
 public without sharing class RollupLogEventHandler {
-  @SuppressWarnings('PMD.ApexCRUDViolation')
+  @SuppressWarnings('PMD.ApexCrudViolation')
   public void handle(List<RollupLogEvent__e> logEvents) {
     Map<String, RollupLog__c> transactionIdToLogs = new Map<String, RollupLog__c>();
 
